[tool.poetry]
name = "beatporter"
version = "0.1.0"
description = ""
authors = ["sjgd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.1"
pandas = "^2.0.3"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
spotipy = "^2.23.0"
openpyxl = "^3.1.2"
coloredlogs = "^15.0.1"
pytest = "^8.3.4"
google-cloud-storage = "^2.19.0"
ruff = "^0.8.4"
ipython = "^8.31.0"
guppy3 = "^3.1.4.post1"
pympler = "^1.1"
psutil = "^6.1.1"
objgraph = "^3.6.2"

[tool.poetry.extras]
development = ["jupyter", "ipython"]


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"
guppy3 = "^3.1.4.post1"
pympler = "^1.1"
psutil = "^6.1.1"
objgraph = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
log_cli = true

[tool.ruff]
target-version = "py311"
line-length = 90

select = [
  'D', #pydocstyle
  'E', 'W', # pycodestyle
  'F', #pyflakes
  'I', # sort imports
  'UP', #pyupgrade
  "RUF",  # ruff dev's own rules
  "SIM", # pyflakes simplicity
  "C90", # more complexity rules
]

[tool.mypy]
ignore_missing_imports = true
ignore_missing_stubs = true
disallow_untyped_defs = true
follow_imports = "skip"
disable_error_code = "import-untyped"
no_implicit_optional = true
