[project]
authors = [
    {name = "sjgd"},
]
requires-python = "==3.11.9"
dependencies = [
    "datetime<6.0,>=5.1",
    "pandas<3.0.0,>=2.0.3",
    "requests<3.0.0,>=2.31.0",
    "bs4<1.0.0,>=0.0.1",
    "lxml<5.0.0,>=4.9.3",
    "spotipy<3.0.0,>=2.23.0",
    "openpyxl<4.0.0,>=3.1.2",
    "coloredlogs<16.0.0,>=15.0.1",
    "pytest<9.0.0,>=8.3.4",
    "google-cloud-storage<3.0.0,>=2.19.0",
    "ruff<1.0.0,>=0.8.4",
    "pydantic<3.0.0,>=2.10.6",
]
name = "beatporter"
version = "1.0.0"
description = ""
readme = "README.md"

[pytest]
log_cli = true

[tool.ruff]
target-version = "py311"
line-length = 90

select = [
  'D', #pydocstyle
  'E', 'W', # pycodestyle
  'F', #pyflakes
  'I', # sort imports
  'UP', #pyupgrade
  "RUF",  # ruff dev's own rules
  "SIM", # pyflakes simplicity
  "C90", # more complexity rules
]

[tool.mypy]
ignore_missing_imports = true
ignore_missing_stubs = true
disallow_untyped_defs = true
follow_imports = "skip"
disable_error_code = "import-untyped"
no_implicit_optional = true


