[project]
authors = [
    {name = "sjgd"},
]
name = "beatporter"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "datetime<6.0,>=5.1",
    "pandas<3.0.0,>=2.0.3",
    "requests<3.0.0,>=2.31.0",
    "bs4<1.0.0,>=0.0.1",
    "spotipy<3.0.0,>=2.23.0",
    "openpyxl<4.0.0,>=3.1.2",
    "coloredlogs<16.0.0,>=15.0.1",
    "pytest>=8.3.4,<9.0.0",
    "pydantic<3.0.0,>=2.10.6",
    "google-cloud-storage>=3.1.0",
    "pyarrow>=21.0.0",
    "pytest-sugar>=1.1.1",
    "python-snappy>=0.7.3",
    "google-crc32c>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.18.2",
    "pydocstyle>=6.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.10",
    "selenium>=4.38.0",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--color=yes"

[tool.isort]
profile = "black"
line_length = 90

[tool.ruff]
target-version = "py313"
line-length = 90

[tool.ruff.lint]
extend-select = [
  'D', #pydocstyle
  'E', 'W', # pycodestyle
  'F', #pyflakes
  'I', # sort imports
  'UP', #pyupgrade
  "RUF",  # ruff dev's own rules
  "SIM", # pyflakes simplicity
  "C90", # more complexity rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "skip"
disable_error_code = "import-untyped"



